# predict-anything

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt
skills/abel-invest/: SKILL.md  pyproject.toml
skills/abel-invest/abel_invest/: __init__.py  __main__.py  bootstrap_runtime_doctor.py  branch_spec.py  cli.py  cli_parser.py  dashboard.py  doctor.py  edge_commands.py  edge_runtime.py  env.py  evidence.py  frontier.py  journal.py  narrative.py  narrative_impl.py  renderers.py  workspace.py
skills/abel-invest/abel_invest/narrative_core/: cli_parser.py  commands.py  dashboard.py  dashboard_payload.py  gate_envelope.py  io.py  promotion.py  promotion_replay.py  promotion_source.py  readiness.py  session_lifecycle.py  state.py  strategy_artifact_upload.py  strategy_artifacts.py  upload_transport.py
skills/abel-invest/abel_invest/narrative_core/command_handlers/: artifact_digest.py  branch.py  frontier.py  session.py  workspace.py
skills/abel-invest/abel_invest/narrative_core/contracts/: branch_spec.py  constants.py  paths.py  templates.py
skills/abel-invest/abel_invest/narrative_core/dashboard_adapters/: __init__.py  primary_strategy_selector.py
skills/abel-invest/abel_invest/narrative_core/evidence/: evidence.py  exploration_path.py  frontier.py  graph_frontier.py  journal.py
skills/abel-invest/abel_invest/narrative_core/promotion/: __init__.py  cleanup.py  constants.py  facts.py  gate.py  models.py  orchestrator.py  packaging.py  report.py  request.py  source_scan.py  tail_oracle.py  utils.py  validation.py
skills/abel-invest/abel_invest/narrative_core/promotion/paper/: __init__.py  smoke.py  (+1 more)
skills/abel-invest/abel_invest/narrative_core/rendering/: renderers.py  session_rendering.py
skills/abel-invest/abel_invest/narrative_core/runtime/: context.py  dsr_accounting.py  workflow_blockers.py
skills/abel-invest/abel_invest/workspace_core/: doctor.py  edge_runtime.py  env.py  workspace.py
skills/abel-invest/references/: branch-authoring.md  constraints.md  data-driven-construction.md  discovery-protocol.md  experiment-loop.md  grandma-mode.md  guarded-optimization.md  hosted-paper-contract.md  hosted-paper-rewrite.md  methodology.md  principles-to-test.md  proven-patterns.md  scaling-discipline.md  workspace-bootstrap.md
skills/abel-invest/scripts/: bootstrap_workspace.py
skills/abel-invest/tests/: test_strategy_artifacts.py  test_workspace_env.py
(+114 files in other folders)
