[project]
name = "abel-invest"
version = "3.7.2"
description = "Abel strategy research skill — causal-graph-driven trading-strategy discovery, candidate search, and Abel Edge gate validation for AI agents (research/validation, not order execution)."
keywords = ["abel", "trade-anything", "strategy-research", "strategy-discovery", "causal-ai", "trading-strategy", "sharpe-ratio", "alpha-research", "agentic-quant", "ai-agents"]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "abel-edge>=0.8.9,<0.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
abel-invest = "abel_invest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["abel_invest*"]

[tool.pytest.ini_options]
testpaths = ["../../tests/abel_invest_skill"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
